--- a/style/chessboard.css
+++ b/style/chessboard.css
@@ -7,26 +7,28 @@ body {
     height: 100vh;
     width: 100vw;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 
 }
 
 .board {
-    width: calc(8*4.5vw);
+    width: calc(10*4.5vw);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     align-content: center;
-    background-color: gray;
-    border: 2vw solid burlywood;
+    background-color: burlywood;
 }
 
 .board div {
     height: 4.5vw;
     width: 4.5vw;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .black {
@@ -36,3 +38,15 @@ body {
 .white {
     background-color: white;
 }
+
+/* .letters {
+    display: flex;
+    background-color: burlywood;
+    width: calc(10*4.5vw);
+    justify-content: center;
+    align-items: flex-end;
+}
+.letters div {
+    width: 4.5vw;
+    height: 4.5vw;
+} */
