inital commit for the modal dialog

--- a/style/chessboard.css
+++ b/style/chessboard.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     justify-content: center;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 4vh;
     text-shadow: 2px 2px 2px rgb(93, 56, 13);
 }
 
