--- a/style/modrian.css
+++ b/style/modrian.css
@@ -1,6 +1,15 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+.row {
+    display: flex;
+    flex-wrap: nowrap;
+}
 .row div {
     
-    height: 20px;
+    height: 40px;
     /* border: 1px solid red; */
 }
 
