--- a/style/modrian.css
+++ b/style/modrian.css
@@ -3,7 +3,10 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+.row {
+    display: flex;
+    flex-wrap: nowrap;
+}
 .row div {
     height: 40px;
 }
